# Mayas-asl

./: .env.example  .gitignore  LICENSE  Makefile  README.md  index.html  manifest.json  pyproject.toml  sw.js
.github/workflows/: ci.yml  deploy-pages.yml
css/: style.css
docker/: Dockerfile  docker-compose.yml
jarvis/: __init__.py  __main__.py  config.py  errors.py  events.py  logging.py
jarvis/cli/: __init__.py  client.py  main.py  repl.py  tray.py  voice_mode.py
jarvis/core/: __init__.py  factory.py  orchestrator.py  permissions.py  persona.py  profile.py
jarvis/dispatch/: __init__.py  claude_code.py
jarvis/llm/: __init__.py  anthropic.py  base.py  echo.py  ollama.py  openai.py  router.py
jarvis/memory/: __init__.py  models.py  store.py
jarvis/scheduler/: __init__.py  cron.py  engine.py
jarvis/security/: __init__.py  audit.py  egress.py  ratelimit.py
jarvis/server/: __init__.py  app.py  approvals.py  auth.py  deps.py
jarvis/server/routes/: __init__.py  approvals.py  audit.py  chat.py  dispatch.py  health.py  profile.py  scheduler.py  voice.py  ws.py
jarvis/tools/: __init__.py  base.py  filesystem.py  github.py  news.py  registry.py  reminders.py  shell.py  system.py  web.py
jarvis/voice/: __init__.py  conversation.py  stt.py  tts.py
js/: app.js  asl-classifier.js  hand-detector.js  hand-signs.js
scripts/: install-macos.sh  install-systemd.sh  install.sh  jarvis.service  mobile-tunnel.sh
tests/: conftest.py  test_config.py  test_cron.py  test_dispatcher.py  test_events.py  test_llm_echo.py  test_memory.py  test_orchestrator.py  test_permissions.py  test_persona.py  test_profile.py  test_scheduler.py  test_security.py  test_server.py  test_tools.py  test_tts_split.py  test_voice_conversation.py
web/: index.html  manifest.json  sw.js
web/css/: style.css
web/js/: api.js  app.js  storage.js  voice.js
