[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "1.0.0"
description = "Jarvis — a local-first AI assistant for phone and computer that connects to your repos and drives Claude Code sessions."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jarvis" }]
keywords = ["ai", "assistant", "llm", "gemma", "claude", "voice", "jarvis"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "PyJWT>=2.8",
    "aiosqlite>=0.20",
    "orjson>=3.10",
    "tenacity>=8.2",
    "structlog>=24.1",
    "jinja2>=3.1",
    "aiofiles>=23.2",
    "psutil>=5.9",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "pyttsx3>=2.90",
    "webrtcvad>=2.0.10",
]
tray = [
    "pystray>=0.19",
    "Pillow>=10.2",
]
anthropic = ["anthropic>=0.34"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
all = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "pyttsx3>=2.90",
    "webrtcvad>=2.0.10",
    "pystray>=0.19",
    "Pillow>=10.2",
    "anthropic>=0.34",
    "openai>=1.30",
]

[project.scripts]
jarvis = "jarvis.cli.main:app"
jarvisd = "jarvis.server.app:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]
exclude = ["tests*", "web*", "docker*", "scripts*"]

[tool.setuptools.package-data]
jarvis = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501", "B008", "SIM102", "SIM105", "SIM108", "SIM117", "SIM113"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
